@@ -36,6 +36,13 @@ class TaskAddForm(DefaultAddForm):
     def schema(self):
         return self.instance_schema
 
+    def updateFieldsFromSchemata(self):
+        super(TaskAddForm, self).updateFieldsFromSchemata()
+        if not is_private_task_feature_enabled():
+            common_group = next(
+                group for group in self.groups if group.__name__ == u'common')
+            common_group.fields = common_group.fields.omit('is_private')
+
     def update(self):
         # put default value for relatedItems into request
         paths = self.request.get('paths', [])
@@ -59,11 +66,6 @@ class TaskAddForm(DefaultAddForm):
             additional_group.widgets['tasktemplate_position'].value = position
 
         additional_group.widgets['tasktemplate_position'].mode = HIDDEN_MODE
-
-        if not is_private_task_feature_enabled():
-            common_group = next(
-                group for group in self.groups if group.__name__ == u'common')
-            common_group.widgets['is_private'].mode = HIDDEN_MODE
 
         if not is_optional_task_permissions_revoking_enabled():
             common_group = next(
@@ -154,6 +156,14 @@ class TaskEditForm(DefaultEditForm):
      - Require the Edit Task permission
      - Records reassign activity when the responsible has changed.
     """
+
+    def updateFieldsFromSchemata(self):
+        super(TaskEditForm, self).updateFieldsFromSchemata()
+
+        if not is_private_task_feature_enabled():
+            common_group = next(
+                group for group in self.groups if group.__name__ == u'common')
+            common_group.fields = common_group.fields.omit('is_private')
 
     def applyChanges(self, data):
         """Records reassign activity when the responsible has changed.
